[package]
name = "ratelock"
authors = ["CppNexus <cppnexus@proton.me>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Zero-dependency, zero-allocation, lock-free token bucket rate limiter for Rust (std + no_std)."
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ratelock"
homepage = "https://github.com/cppNexus/ratelock"
repository = "https://github.com/cppNexus/ratelock.git"
keywords = ["rate-limit", "token-bucket", "lock-free", "no-std", "throttling"]
categories = ["algorithms", "concurrency", "no-std"]
exclude = [".github/", "target/"]

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.8.2"
governor = "0.10.1"

[[bench]]
name = "compare"
harness = false
required-features = ["std"]